--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-numpy
-gym
-tqdm
-pyqtgraph
-joblib
+cloudpickle==1.2.2
+future==0.18.2
+gym==0.15.4
+joblib==0.14.1
+numpy==1.18.1
+opencv-python==4.1.2.30
+pyglet==1.4.9  # Gym required version does not work on my machine
+pyqt5-sip==12.7.0
+pyqt5==5.14.1
+pyqtgraph==0.10.0
+scipy==1.4.1
+six==1.14.0
+tqdm==4.41.1
